<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_50"
        android:background="@color/btn_blue_normal">
        <!--返回按钮的布局-->
        <RelativeLayout
            android:id="@+id/btn_back_login"
            android:layout_width="@dimen/activity_size_60"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/activity_size_12"
                android:layout_height="@dimen/activity_size_22"
                android:background="@mipmap/btn_back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_size_15"/>
        </RelativeLayout>
        <!--标题头文本-->
        <TextView
            android:id="@+id/top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_20"
            android:layout_centerInParent="true"
            android:textColor="@color/whilte"
            android:text="@string/app_name"
            />

    </RelativeLayout>

    <!--最上面一行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_50"
        android:orientation="horizontal">
    </LinearLayout>
    <!--手机号输入框-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_50"
        android:background="@color/whilte">
        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_login_areaCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/areaCode"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/iv_login_areaCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dip"
                android:src="@mipmap/areacode"
                android:contentDescription="@string/app_name"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dip"
                android:layout_marginLeft="14dip"
                android:layout_marginTop="4dip"
                android:src="@mipmap/xiegan"
                android:contentDescription="@string/app_name" />
        </LinearLayout>
        <EditText
            android:id="@+id/et_login_phone"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/btn_input_phoNum"
            android:inputType="phone" >
        </EditText>
    </LinearLayout>


    <!--密码输入框-->

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/view_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/white"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/password"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/btn_input_password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_40"
        android:layout_marginTop="@dimen/activity_size_10">
        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_size_15"
            android:textColor="@color/gray3"
            android:text="记住账号及密码"/>
    </LinearLayout>

    <!--登录按钮-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_50"
        android:layout_marginTop="@dimen/activity_size_10">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/activity_size_350"
            android:layout_height="@dimen/activity_size_50"
            android:layout_centerInParent="true"
            android:background="@drawable/button_shape"
            android:text="@string/btn_login"
            android:textColor="@color/whilte"
            android:textSize="@dimen/activity_size_18" />



    </RelativeLayout>
    <TextView
        android:id="@+id/tv_login_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="20dip"
        android:layout_marginTop="52dip"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/forget_pwd"
        android:textColor="@color/btn_blue_normal"
        android:textSize="14sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dip"
        android:layout_marginBottom="15dip"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/tv_login_ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_ask" />

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tv_login_ask"
            android:text="@string/register"
            android:textColor="@color/btn_blue_normal"
            android:textSize="14sp" />
    </RelativeLayout>
</LinearLayout>

