<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray2"
    android:orientation="vertical">

    <include layout="@layout/activity_top"></include>
    <!--第一行-->
    <LinearLayout
        android:id="@+id/mine_ll_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_50"
        android:background="@color/whilte"
        android:orientation="horizontal">


        <!--文字-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_size_50"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_size_18"
                android:text="@string/mine_btn_password"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
        <!--箭头-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <ImageView
                android:layout_width="@dimen/activity_size_10"
                android:layout_height="@dimen/activity_size_19"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/right_black_arrow" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/mine_ll_clean"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_50"
        android:layout_marginTop="@dimen/activity_size_1"
        android:background="@color/whilte"
        android:orientation="horizontal">


        <!--文字-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_size_50"
            android:layout_marginTop="@dimen/activity_size_1"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_size_18"
                android:text="@string/mine_btn_clean"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
        <!--箭头-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <ImageView
                android:layout_width="@dimen/activity_size_10"
                android:layout_height="@dimen/activity_size_19"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/right_black_arrow" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine_ll_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_size_50"
        android:layout_marginTop="@dimen/activity_size_1"
        android:background="@color/whilte"
        android:orientation="horizontal">


        <!--文字-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_size_50"
            android:layout_marginTop="@dimen/activity_size_1"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_size_18"
                android:text="@string/mine_btn_about"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>
        <!--箭头-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10">

            <ImageView
                android:layout_width="@dimen/activity_size_10"
                android:layout_height="@dimen/activity_size_19"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/right_black_arrow" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout

        android:layout_marginTop="@dimen/activity_size_200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="@dimen/activity_size_300"
            android:layout_height="@dimen/activity_size_40"
            android:background="@mipmap/btn_send_code"
            android:textSize="@dimen/activity_size_16"
            android:id="@+id/btn_mine_quit"
            android:text="@string/mine_btn_exit"
            android:layout_centerInParent="true"
            android:textColor="@color/whilte" />
    </RelativeLayout>
</LinearLayout>
